[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/character_development_scene.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu_container64x256px.png" type="Texture" id=2]
[ext_resource path="res://fonts/Pixellari28px.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/menus/selector.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/menus/accessibility/visual_accessibility_info.tscn" type="PackedScene" id=5]

[node name="character_development" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="character_dev_background" type="Sprite" parent="."]

[node name="char_dev_hbox" type="HBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 450.0

[node name="skill_tree_vbox" type="VBoxContainer" parent="char_dev_hbox"]
margin_right = 275.0
margin_bottom = 450.0
rect_min_size = Vector2( 250, 450 )

[node name="character_name_box" type="NinePatchRect" parent="char_dev_hbox/skill_tree_vbox"]
margin_right = 275.0
margin_bottom = 52.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="character_name" type="Label" parent="char_dev_hbox/skill_tree_vbox/character_name_box"]
margin_left = 12.0
margin_top = 18.0
margin_right = 287.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "Character Name"
valign = 3
uppercase = true

[node name="skill_scroll_container" type="ScrollContainer" parent="char_dev_hbox/skill_tree_vbox"]
margin_top = 56.0
margin_right = 275.0
margin_bottom = 306.0
rect_min_size = Vector2( 275, 250 )
scroll_horizontal_enabled = false

[node name="skill_list" type="VBoxContainer" parent="char_dev_hbox/skill_tree_vbox/skill_scroll_container"]
margin_right = 275.0
margin_bottom = 250.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="stat_vbox" type="VBoxContainer" parent="char_dev_hbox"]
margin_left = 279.0
margin_right = 800.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 450 )
size_flags_horizontal = 3

[node name="character_stats_panel" type="NinePatchRect" parent="char_dev_hbox/stat_vbox"]
margin_right = 521.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
texture = ExtResource( 2 )
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="character_stat_grid" type="GridContainer" parent="char_dev_hbox/stat_vbox/character_stats_panel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 445.0
margin_bottom = 220.0
columns = 6

[node name="hp_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_right = 90.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "HP"
valign = 1
uppercase = true

[node name="hp_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "100"
uppercase = true

[node name="hp_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_right = 244.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "(    )"
uppercase = true

[node name="proficiency_1_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_right = 351.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Sword:"
uppercase = true

[node name="proficiency_1_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_right = 371.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "1"
uppercase = true

[node name="prof_1_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 375.0
margin_right = 413.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="str_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_top = 32.0
margin_right = 90.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "STR"
valign = 1
uppercase = true

[node name="str_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "12"
uppercase = true

[node name="str_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_top = 32.0
margin_right = 244.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="proficiency_2_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_top = 32.0
margin_right = 351.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Axe:"
uppercase = true

[node name="proficiency_2_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_top = 32.0
margin_right = 371.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "0"
uppercase = true

[node name="prof_2_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 375.0
margin_top = 32.0
margin_right = 413.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="agi_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_top = 64.0
margin_right = 90.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "AGI"
valign = 1
uppercase = true

[node name="agi_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_top = 64.0
margin_right = 184.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "8"
uppercase = true

[node name="agi_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_top = 64.0
margin_right = 244.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="proficiency_3_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_top = 64.0
margin_right = 351.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Spear:"
uppercase = true

[node name="proficiency_3_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_top = 64.0
margin_right = 371.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "2"
uppercase = true

[node name="prof_3_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 375.0
margin_top = 64.0
margin_right = 413.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="vit_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_top = 96.0
margin_right = 90.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "VIT"
valign = 1
uppercase = true

[node name="vit_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_top = 96.0
margin_right = 184.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "10"
uppercase = true

[node name="vit_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_top = 96.0
margin_right = 244.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="proficiency_4_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_top = 96.0
margin_right = 351.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "Club:"
uppercase = true

[node name="proficiency_4_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_top = 96.0
margin_right = 371.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "1"
uppercase = true

[node name="prof_4_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 375.0
margin_top = 96.0
margin_right = 413.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="faith_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_top = 128.0
margin_right = 90.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "FAITH"
valign = 1
uppercase = true

[node name="faith_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_top = 128.0
margin_right = 184.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "10"
uppercase = true

[node name="faith_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_top = 128.0
margin_right = 244.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="proficiency_5_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_top = 128.0
margin_right = 351.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "Shield:"
uppercase = true

[node name="proficiency_5_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_top = 128.0
margin_right = 371.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "2"
uppercase = true

[node name="prof_5_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 375.0
margin_top = 128.0
margin_right = 413.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="luck_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_top = 160.0
margin_right = 90.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "FORTN"
valign = 1
uppercase = true

[node name="luck_num_label" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 94.0
margin_top = 160.0
margin_right = 184.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 3 )
text = "6"
uppercase = true

[node name="luck_mod" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 188.0
margin_top = 160.0
margin_right = 244.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 3 )
text = "(  )"
uppercase = true

[node name="empty_spacer" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 248.0
margin_top = 160.0
margin_right = 351.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="empty_spacer_num" type="Label" parent="char_dev_hbox/stat_vbox/character_stats_panel/character_stat_grid"]
margin_left = 355.0
margin_top = 160.0
margin_right = 371.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="skill_description_panel" type="NinePatchRect" parent="char_dev_hbox/stat_vbox"]
margin_top = 304.0
margin_right = 521.0
margin_bottom = 404.0
rect_min_size = Vector2( 500, 100 )
texture = ExtResource( 2 )
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="skill_info_vbox" type="VBoxContainer" parent="char_dev_hbox/stat_vbox/skill_description_panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 491.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="skill_name_label" type="Label" parent="char_dev_hbox/stat_vbox/skill_description_panel/skill_info_vbox"]
margin_right = 475.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Skill: skill_name"
uppercase = true

[node name="skill_description_label" type="Label" parent="char_dev_hbox/stat_vbox/skill_description_panel/skill_info_vbox"]
margin_top = 32.0
margin_right = 475.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 3 )
text = "Description"
autowrap = true
uppercase = true

[node name="selector" parent="." instance=ExtResource( 4 )]

[node name="visual_accessibility_info" parent="." instance=ExtResource( 5 )]
margin_top = 390.0
margin_bottom = 486.0
